# MentalHealth-Hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  seed_events.sql
alembic/: env.py
alembic/versions/: 2f6d5b0afadd_add_internship_matching_models.py  3f73994aac32_add_chat_tables.py  51f8c8c34e5c_create_university.py  74b9d3df66c3_add_external_internship_metadata.py  9c1f2a7e4b6d_add_event_rsvps_table.py  a1253d634e78_add_apartment_table.py  a1b2c3d4e5f6_add_keycloak_user_id_to_universities.py  b2c3d4e5f6a7_merge_forum_and_events_heads.py  b8c1e4a92d13_add_internship_sync_tracking_fields.py  c3d4e5f6a7b8_add_images_to_events.py  c4f8be8c0c2a_merge_chat_and_internship_heads.py  c7d8e9f0a1b2_add_listing_risk_fields.py  d1ff1a7278ba_merge_all_heads.py  d4e5f6a7b8c9_merge_images_and_risk_heads.py  e3f4a5b6c7d8_add_external_apartment_metadata.py  f1e2d3c4b5a6_add_forum_tables.py  f4a5b6c7d8e9_merge_listing_risk_and_housing_heads.py  f6b3d9a2c1e8_add_events_table.py
app/api/: dependencies.py
app/api/v1/: chat.py  router.py  websocket_manager.py
app/application/dto/: __init__.py  apartment_dto.py  apartment_sync_dto.py  base_dto.py  chat_dto.py  event_dto.py  event_rsvp_dto.py  (+6 more)
app/core/: config.py
app/jobs/: daily_recommendations.py
keycloak/: realm-export.json
memory/: MEMORY.md  project_overview.md
tests/: test_apartments.py  test_chat_search.py  test_chat_use_cases.py  test_event_rsvp.py  test_events.py  test_internship_matching.py  test_listing_risk.py
(+90 files in other folders)
